# pakka

./: .clang-tidy  .gitattributes  .gitignore  AGENTS.md  CHANGELOG.md  CMakeLists.txt  LICENSE  Makefile  README.md  pakka.sln  pakka.vcxproj  pakka.vcxproj.filters
.github/workflows/: pages.yml  release.yml  test.yml
contrib/: README.md  pak_content_types.tsv
dev/: comparison.md  fixtures.mk  libpakka-phase1-symbols.txt  pk3-design.md
dev/bench/: README.md  compare.sh  render.py  run.sh  synth.c
dev/docs/: daikatana-pak-format.md  pk3-pk4-format.md  quake-pak-format.md  sin-pak-format.md  wad-format.md  windows-codepage.md
dev/fuzz/: .gitignore  pakka_fuzz_dk_inflate.c  pakka_fuzz_open.c  pakka_fuzz_roundtrip.c
dev/legacy/: quake-era-targets.md
dev/legacy/ci/: Dockerfile  Dockerfile.rh9  README.md  build.sh  rh9-rpms.sha256
dev/legacy/netbsd-sparc/: README.md
dev/legacy/netbsd-sparc/assets/: SHA512SUMS
dev/legacy/netbsd-sparc/scripts/: fetch-iso.sh  install-vm.sh  prepare-source-tarball.sh  run-build.sh  run-vm.sh
dev/legacy/rh9/: README.md
dev/legacy/rh9/assets/: MD5SUM  ks.cfg
dev/legacy/rh9/scripts/: change-cd.sh  fetch-isos.sh  install-vm.sh  make-kickstart-floppy.sh  prepare-source-tarball.sh  run-build.sh  run-vm.sh
dev/lint/: add-path-symmetry.sh
dev/win/: fixtures.ps1  realpak-test.sh  slow-test.sh
docs/: _config.yml  formats.md  index.md  install.md  libpakka.md  platforms.md  security.md  testing.md
docs/_layouts/: default.html
docs/formats/: daikatana-pak-format.md  pk3-pk4-format.md  quake-pak-format.md  sin-pak-format.md  wad-format.md  windows-codepage.md
include/: pakka.h
man/: pakka.1  pakka.3
src/: cli.c  common.c  common.h  compat.c  compat.h  debug.c  dk_codec.c  filesystem.c  filesystem.h  header.h  main.c  options.c  options.h  pakfile.c  pakreader.c  pk3file.c  platform.c  platform.h  string.c  string.h
src/deflate/: deflate_iface.h  deflate_vendored.c  deflate_zlib.c
src/win/: VENDOR.md  msdirent.h
test/: CMakeLists.txt  c_api_test.bats  c_api_test.c  dk.bats  dk_codec_test.c  dk_test.c  large_file_test.c  pak_goldsrc.bats  pak_goldsrc_test.c  pakka_test.c  pk3_q3demo.bats  pk3_q3demo_test.c  pk3_test.c  pk4.bats  pk4_test.c  proc_self_test.c  sin.bats  sin_test.c  unicode_paths_test.c  wad.bats  wad_test.c
test/fixtures/dk/: README.md
test/fixtures/dk/inputs/: dkpak_output.txt
test/support/: fs.c  fs.h  proc.c  proc.h  test_macros.h  test_runner.c  text.c  text.h  zip_build.c  zip_build.h
tests/: c_api_test.bats  c_api_test.c  dk.bats  dk_codec_test.bats  dk_codec_test.c  large_file.bats  pak_goldsrc.bats  pakka.bats  pk3.bats  pk3_q3demo.bats  pk4.bats  sin.bats  unicode_paths.bats
tests/fixtures/dk/: README.md  user.pak
tests/fixtures/dk/inputs/: generate.py  notes.txt  random.bsp
